--- a/src/main/webapp/views/dynamic/header.jspf
+++ b/src/main/webapp/views/dynamic/header.jspf
@@ -31,7 +31,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-        <a class="navbar-brand" href="index.jsp">Car<span>Book</span></a>
+        <a class="navbar-brand" href="index.jsp">Car<span>Rental</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="oi oi-menu"></span> Menu
         </button>
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a href="index.jsp" class="nav-link">Home</a></li>
-                <li class="nav-item active"><a href="about.jsp" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="about.jsp" class="nav-link">About</a></li>
                 <li class="nav-item"><a href="services.jsp" class="nav-link">Services</a></li>
                 <li class="nav-item"><a href="pricing.jsp" class="nav-link">Pricing</a></li>
                 <li class="nav-item"><a href="car.jsp" class="nav-link">Cars</a></li>
