--- a/src/main/webapp/views/dynamic/header.jspf
+++ b/src/main/webapp/views/dynamic/header.jspf
@@ -1,4 +1,5 @@
 <%@ taglib prefix="c" uri="http://www.springframework.org/tags" %>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="d" %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -38,13 +39,14 @@
 
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a href="index.jsp" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="about.jsp" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="services.jsp" class="nav-link">Services</a></li>
-                <li class="nav-item"><a href="pricing.jsp" class="nav-link">Pricing</a></li>
-                <li class="nav-item"><a href="car.jsp" class="nav-link">Cars</a></li>
-                <li class="nav-item"><a href="blog.jsp" class="nav-link">Blog</a></li>
-                <li class="nav-item"><a href="contact.jsp" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="index" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="about" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="services" class="nav-link">Services</a></li>
+                <li class="nav-item"><a href="pricing" class="nav-link">Pricing</a></li>
+                <li class="nav-item"><a href="car" class="nav-link">Cars</a></li>
+                <li class="nav-item"><a href="blog" class="nav-link">Blog</a></li>
+                <li class="nav-item"><a href="contact" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="myTrips" class="nav-link">My Trips</a></li>
             </ul>
         </div>
     </div>
