--- a/src/main/webapp/views/dynamic/header.jspf
+++ b/src/main/webapp/views/dynamic/header.jspf
@@ -1,5 +1,6 @@
 <%@ taglib prefix="c" uri="http://www.springframework.org/tags" %>
 <%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="d" %>
+<%@ taglib prefix="sec" uri="http://www.springframework.org/security/tags" %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href='<c:url value="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap"/>' rel="stylesheet">
+    <link href='<c:url value="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap"/>'
+          rel="stylesheet">
 
     <link rel="stylesheet" href='<c:url value="/resources/css/open-iconic-bootstrap.min.css"/>'>
     <link rel="stylesheet" href='<c:url value="/resources/css/animate.css"/>'>
@@ -32,21 +34,35 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-        <a class="navbar-brand" href="/">Car<span>Rental</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href='<c:url value="/"/>'>Car<span>Rental</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+                aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="oi oi-menu"></span> Menu
         </button>
 
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="about" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="services" class="nav-link">Services</a></li>
-                <li class="nav-item"><a href="pricing" class="nav-link">Pricing</a></li>
-                <li class="nav-item"><a href="car" class="nav-link">Cars</a></li>
-                <li class="nav-item"><a href="blog" class="nav-link">Blog</a></li>
-                <li class="nav-item"><a href="contact" class="nav-link">Contact</a></li>
-                <li class="nav-item"><a href="myTrips" class="nav-link">My Trips</a></li>
+                <li class="nav-item"><a href='<c:url value="/"/>' class="nav-link">Home</a></li>
+                <li class="nav-item"><a href='<c:url value="about"/>' class="nav-link">About</a></li>
+                <li class="nav-item"><a href='<c:url value="services"/>' class="nav-link">Services</a></li>
+                <li class="nav-item"><a href='<c:url value="pricing"/>' class="nav-link">Pricing</a></li>
+                <li class="nav-item"><a href='<c:url value="car"/>' class="nav-link">Cars</a></li>
+                <li class="nav-item"><a href='<c:url value="blog"/>' class="nav-link">Blog</a></li>
+                <li class="nav-item"><a href='<c:url value="contact"/>' class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href='<c:url value="myTrips"/>' class="nav-link">My Trips</a></li>
+                <sec:authorize access="!isAuthenticated()">
+                    <li class="nav-item"><a href='<c:url value="/login"/>' class="nav-link" style="color: #01d28e"
+                                            onmouseover="this.style.color='#fff'"
+                                            onmouseleave="this.style.color='#01d28e'">Sign In</a></li>
+                    <li class="nav-item"><a href='<c:url value="register"/>' class="nav-link" style="color: #01d28e"
+                                            onmouseover="this.style.color='#fff'"
+                                            onmouseleave="this.style.color='#01d28e'">Sign Up</a></li>
+                </sec:authorize>
+                <sec:authorize access="isAuthenticated()">
+                    <li class="nav-item"><a href='<c:url value="/logout"/>' class="nav-link" style="color: #01d28e"
+                                            onmouseover="this.style.color='#fff'"
+                                            onmouseleave="this.style.color='#01d28e'">Log Out</a></li>
+                </sec:authorize>
             </ul>
         </div>
     </div>
