--- a/src/main/webapp/views/dynamic/footer.jspf
+++ b/src/main/webapp/views/dynamic/footer.jspf
@@ -17,8 +17,8 @@
             <div class="ftco-footer-widget mb-4 ml-md-5">
                <h2 class="ftco-heading-2">Information</h2>
                <ul class="list-unstyled">
-                  <li><a href="#" class="py-2 d-block">About</a></li>
-                  <li><a href="#" class="py-2 d-block">Services</a></li>
+                  <li><a href='<c:url value="about"/>' class="py-2 d-block">About</a></li>
+                  <li><a href='<c:url value="services"/>' class="py-2 d-block">Services</a></li>
                   <li><a href="#" class="py-2 d-block">Term and Conditions</a></li>
                   <li><a href="#" class="py-2 d-block">Best Price Guarantee</a></li>
                   <li><a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li>
@@ -33,7 +33,7 @@
                   <li><a href="#" class="py-2 d-block">Payment Option</a></li>
                   <li><a href="#" class="py-2 d-block">Booking Tips</a></li>
                   <li><a href="#" class="py-2 d-block">How it works</a></li>
-                  <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+                  <li><a href='<c:url value="contact"/>' class="py-2 d-block">Contact Us</a></li>
                </ul>
             </div>
          </div>
