--- a/src/main/webapp/views/dynamic/header.jspf
+++ b/src/main/webapp/views/dynamic/header.jspf
@@ -34,21 +34,22 @@
             <div class="collapse navbar-collapse" id="ftco-nav">
                <ul class="navbar-nav ml-auto">
                   <li class="nav-item"><a href='<c:url value="/"/>' class="nav-link">Home</a></li>
-                  <li class="nav-item"><a href='<c:url value="about"/>' class="nav-link">About</a></li>
-                  <li class="nav-item"><a href='<c:url value="services"/>' class="nav-link">Services</a></li>
-                  <li class="nav-item"><a href='<c:url value="pricing"/>' class="nav-link">Pricing</a></li>
-                  <li class="nav-item"><a href='<c:url value="car"/>' class="nav-link">Cars</a></li>
-                  <li class="nav-item"><a href='<c:url value="contact"/>' class="nav-link">Contact</a></li>
+                  <li class="nav-item"><a href='<c:url value="/about"/>' class="nav-link">About</a></li>
+                  <li class="nav-item"><a href='<c:url value="/services"/>' class="nav-link">Services</a></li>
+                  <li class="nav-item"><a href='<c:url value="/pricing"/>' class="nav-link">Pricing</a></li>
+                  <li class="nav-item"><a href='<c:url value="/car"/>' class="nav-link">Cars</a></li>
+                  <li class="nav-item"><a href='<c:url value="/contact"/>' class="nav-link">Contact</a></li>
                   <sec:authorize access="!isAuthenticated()">
                      <li class="nav-item"><a href='<c:url value="/login"/>' class="nav-link" style="color: #01d28e"
                         onmouseover="this.style.color='#fff'"
                         onmouseleave="this.style.color='#01d28e'">Sign In</a></li>
-                     <li class="nav-item"><a href='<c:url value="register"/>' class="nav-link" style="color: #01d28e"
+                     <li class="nav-item"><a href='<c:url value="/register"/>' class="nav-link" style="color: #01d28e"
                         onmouseover="this.style.color='#fff'"
                         onmouseleave="this.style.color='#01d28e'">Sign Up</a></li>
                   </sec:authorize>
                   <sec:authorize access="isAuthenticated()">
-                     <li class="nav-item"><a href='<c:url value="myRentals"/>' class="nav-link">My Rentals</a></li>
+                     <li class="nav-item"><a href='<c:url value="/my-rentals"/>' class="nav-link">My Rentals</a></li>
+                     <li class="nav-item"><a href='<c:url value="/my-account"/>' class="nav-link">My Account</a></li>
                      <li class="nav-item"><a href='<c:url value="/logout"/>' class="nav-link" style="color: #01d28e"
                         onmouseover="this.style.color='#fff'"
                         onmouseleave="this.style.color='#01d28e'">Log Out</a></li>
