--- a/src/main/webapp/WEB-INF/view/dynamic/footer.jspf
+++ b/src/main/webapp/WEB-INF/view/dynamic/footer.jspf
@@ -4,8 +4,8 @@
       <div class="row mb-5">
          <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-               <h2 class="ftco-heading-2"><a href="#" class="logo">Car<span>book</span></a></h2>
-               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+               <h2 class="ftco-heading-2"><a href="#" class="logo">Car<span>rental</span></a></h2>
+               <p>Rent cars from many different locations without the need to return them to the same place. Move dynamically throughout all of Poland.</p>
                <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                   <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                   <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -20,7 +20,6 @@
                   <li><a href='<c:url value="about"/>' class="py-2 d-block">About</a></li>
                   <li><a href='<c:url value="services"/>' class="py-2 d-block">Services</a></li>
                   <li><a href="#" class="py-2 d-block">Term and Conditions</a></li>
-                  <li><a href="#" class="py-2 d-block">Best Price Guarantee</a></li>
                   <li><a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li>
                </ul>
             </div>
@@ -30,8 +29,6 @@
                <h2 class="ftco-heading-2">Customer Support</h2>
                <ul class="list-unstyled">
                   <li><a href="#" class="py-2 d-block">FAQ</a></li>
-                  <li><a href="#" class="py-2 d-block">Payment Option</a></li>
-                  <li><a href="#" class="py-2 d-block">Booking Tips</a></li>
                   <li><a href="#" class="py-2 d-block">How it works</a></li>
                   <li><a href='<c:url value="contact"/>' class="py-2 d-block">Contact Us</a></li>
                </ul>
@@ -44,7 +41,7 @@
                   <ul>
                      <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
                      <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-                     <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+                     <li><a href="mailto:kamilt598@gmail.com"><span class="icon icon-envelope"></span><span class="text">kamilt598@gmail.com</span></a></li>
                   </ul>
                </div>
             </div>
